--- a/index.html
+++ b/index.html
@@ -81,51 +81,55 @@
       </div>
       <div class="footer">
         <div class="footer-container">
-          <!-- Brand and Contact -->
-          <div class="footer-brand">
-            <img src="/IMAGES/logo.svg" alt="" />
-            <p>
-              <img src="/IMAGES/map-pin.svg" alt="" /> Lorem ipsum dolor sit
-              amet, consectetur adipiscing elit.
-            </p>
-            <p>
+          <div class="footer-info">
+            <div class="footer-logo">
+              <img src="/IMAGES/logo.svg" alt="" />
+            </div>
+            <div class="information">
+              <img src="/IMAGES/map-pin.svg" alt="" />
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Praesentium architecto at temporibus aliquid, sint ipsum quia.
+                Voluptatum quae quasi iure.
+              </p>
+            </div>
+            <div class="information">
               <img src="/IMAGES/phone-call.svg" alt="" />
-              +1-543-123-4567
-            </p>
-            <p>
+              <p>09017120409</p>
+            </div>
+            <div class="information">
               <img src="/IMAGES/envelope-simple.svg" alt="" />
-              example@fylo.com
-            </p>
+              <p>example@Huddle.com</p>
+            </div>
           </div>
-
-          <!-- Links -->
           <div class="footer-links">
-            <div class="link-group">
-              <a href="#">About Us</a>
-              <a href="#">What We Do</a>
-              <a href="#">FAQ</a>
+            <div class="links">
+              <ul>
+                <li>About us</li>
+                <li>What we do</li>
+                <li>FAQ</li>
+              </ul>
             </div>
-            <div class="link-group">
-              <a href="#">Career</a>
-              <a href="#">Blog</a>
-              <a href="#">Contact Us</a>
+            <div class="links">
+              <ul>
+                <li>Career</li>
+                <li>Blog</li>
+                <li>Contact us</li>
+              </ul>
             </div>
           </div>
-
-          <!-- Social Icons -->
-          <div class="footer-social">
-            <a href="#"
-              ><img src="/IMAGES/twitter-logo-fill.svg" alt="Twitter"
-            /></a>
-            <a href="#"
-              ><img src="/IMAGES/facebook-f-brands (1).svg" alt="Facebook"
-            /></a>
-            <a href="#"
-              ><img src="/IMAGES/instagram-logo-light.svg" alt="Instagram"
-            /></a>
+          <div class="social-media-icon">
+            <div>
+              <img src="/IMAGES/facebook-f-brands (1).svg" alt="" />
+            </div>
+            <div>
+              <img src="/IMAGES/twitter-logo-fill.svg" alt="" />
+            </div>
+            <div>
+              <img src="/IMAGES/instagram-logo-light.svg" alt="" />
+            </div>
           </div>
         </div>
-
         <p class="footer-copy">
           &copy; Copyright 2018 Huddle. All rights reserved.
         </p>
