--- a/index.html
+++ b/index.html
@@ -140,6 +140,6 @@
     let todayDate = new Date().getFullYear();
 
     copyRight.innerHTML =
-      ' &copy copyright' + todayDate + ' ' + 'All rights reserved.';
+      ' &copy copyright' + ' ' + todayDate + ' ' + 'All rights reserved.';
   </script>
 </html>
